# skiddie-games

./: .gitignore  MANIFEST.in  Pipfile  README.md  README.rst  default.nix  pyproject.toml  requirements.nix  setup.py  shell.nix
crackit/: constants.py  difficulty.py  utils.py
crackit/descriptions/: port_scanner.rst  port_scanner.txt
crackit/games/: __init__.py  hash_cracker.py  port_scanner.py  shell_scripter.py
crackit/games/hex_editor/: __init__.py  generator.py  gui.py  main.py
crackit/games/shell_scripter/: __init__.py  command.py  constants.py  main.py
crackit/instructions/: hash_cracker.txt  shell_scripter.txt
crackit/launcher/: cli.py  common.py  gui.py  leaderboard.py  scores.py
docs/instructions/: hash_cracker.txt  shell_scripter.txt
skiddie/: __main__.py  constants.py  exceptions.py  utils.py
skiddie/descriptions/: database_querier.md  hex_editor.md  pattern_finder.md  port_scanner.md  tree_builder.md
skiddie/games/: __init__.py  hash_cracker.py  port_scanner.py
skiddie/games/database_querier/: __init__.py  columns.py  constraints.py  gui.py  main.py  table.py
skiddie/games/hex_editor/: generator.py  gui.py  logic.py  main.py
skiddie/games/pattern_finder/: gui.py  logic.py  main.py
skiddie/games/shell_scripter/: constants.py  logic.py  main.py
skiddie/games/tree_builder/: constants.py  gui.py  logic.py  main.py
skiddie/launcher/: cli.py  common.py  difficulty.py  games.py  gui.py  scores.py
skiddie/templates/: difficulty.json
skiddie/utils/: __init__.py  counting.py  misc.py  ui.py
src/skiddie/: __init__.py  exceptions.py
(+31 files in other folders)
