[project]
name = "skiddie"
version = "0.1.0"
description = "Hollywood-style hacking minigames"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click==6.7",
    "prompt-toolkit==3.0.47",
    "setuptools>=73.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "six>=1.16.0",
]

[tool.uv.sources]
